--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -1,5 +1,63 @@
 # 01.Rmd ----
 
+@book{di2015drug,
+  title={Drug-like properties: concepts, structure design and methods from ADME to toxicity optimization},
+  author={Di, Li and Kerns, Edward},
+  year={2015},
+  publisher={Academic press}
+}
+
+
+# yim.Rmd ----
+
+@article{usansky2005estimating,
+  title={Estimating human drug oral absorption kinetics from Caco-2 permeability using an absorption-disposition model: model development and evaluation and derivation of analytical solutions for ka and Fa},
+  author={Usansky, Helen H and Sinko, Patrick J},
+  journal={Journal of pharmacology and experimental therapeutics},
+  volume={314},
+  number={1},
+  pages={391--399},
+  year={2005},
+  publisher={ASPET}
+}
+
+@article{sun2002comparison,
+  title={Comparison of human duodenum and Caco-2 gene expression profiles for 12,000 gene sequences tags and correlation with permeability of 26 drugs},
+  author={Sun, Duxin and Lennernas, Hans and Welage, Lynda S and Barnett, Jeffery L and Landowski, Christopher P and Foster, David and Fleisher, David and Lee, Kyung-Dall and Amidon, Gordon L},
+  journal={Pharmaceutical research},
+  volume={19},
+  number={10},
+  pages={1400--1416},
+  year={2002},
+  publisher={Springer}
+}
+
+@article{yim2020predicting,
+  title={Predicting human pharmacokinetics from preclinical data: volume of distribution},
+  author={Yim, Dong-Seok and Choi, Suein},
+  journal={Translational and Clinical Pharmacology},
+  volume={28},
+  number={4},
+  pages={169},
+  year={2020},
+  publisher={Korean Society for Clinical Pharmacology and Therapeutics}
+}
+
+@article{yim2019potency,
+  title={Potency and plasma protein binding of drugs in vitro—a potentially misleading pair for predicting in vivo efficacious concentrations in humans},
+  author={Yim, Dong-Seok},
+  journal={The Korean Journal of Physiology \& Pharmacology},
+  volume={23},
+  number={4},
+  pages={231--236},
+  year={2019},
+  publisher={The Korean Physiological Society and The Korean Society of Pharmacology}
+}
+
+
+
+# 01.Rmd ----
+
 @article{yim2019potency,
   title={Potency and plasma protein binding of drugs in vitro—a potentially misleading pair for predicting in vivo efficacious concentrations in humans},
   author={Yim, Dong-Seok},
