--- a/Induction.Rmd
+++ b/Induction.Rmd
@@ -13,7 +13,7 @@ opts_chunk$set(echo=FALSE)
 
 ## 서론
 
-대사 유도란 주로 약이라 화학물질에 의해서 효소의 대사 능력이 증가하는 현상을 말한다. 특히 약동학적 약물상호작용 측면에서는 이러한 대사 유도의 양이 많아져서 기질의 청소율이 증가하는 것을 의미한다.
+대사 유도란 주로 약이나 화학물질에 의해서 효소의 대사 능력이 증가하는 현상을 말한다. 특히 약동학적 약물상호작용 측면에서는 이러한 대사 유도의 양이 많아져서 기질의 청소율이 증가하는 것을 의미한다.
 따라서 유도체(inducer)란 특정 효소를 이러한 방식으로 유도할 수 있는 능력이 있는 물질을 말한다. 
 유도체에 의해 대사 효소가 증가하게 되면 이에 따라 기질의 청소율이 증가하게 되며 이는 기질의 인체에서의 노출 감소 또는 기질의 대사체의 노출 증가를 일으키며 이로 인해 약의 효능과 안전성 모두 영향을 미칠 수 있다.
 대사 유도에 의한 영향은 capacity가 낮은 CYP isoform에서 특히 더 나타나게 된다. CYP isoform이 아닌 효소에서도 유도 현상이 나타날 수 있으나 이러한 효소들은 대부분 친화도(affinity)가 낮고 capacity가 높기 때문에 기질의 청소율에 큰 영향을 미치는 경우는 드물다. 
@@ -24,7 +24,13 @@ opts_chunk$set(echo=FALSE)
 
 ## 유도체의 작용 메커니즘
 
-일반적으로 유도체는 아래 그림\@ref(fig:mechanism)과 같이 Nucleus의 Receptor와의 결합을 통해 유전자의 전사를 유도하여 효소의 생성을 증가 시킨다. 
+```{r mechanism, fig.cap = "(ref:mechanism)", echo = FALSE}
+knitr::include_graphics('media-induction/mechanism.png')
+```
+(ref:mechanism) 유도체의 작용 메커니즘
+
+
+일반적으로 유도체는 위 그림\@ref(fig:mechanism)과 같이 Nucleus의 Receptor와의 결합을 통해 유전자의 전사를 유도하여 효소의 생성을 증가 시킨다. 
 작용 메커니즘은 비슷하나 CYP isoform에 따라서 크게 3가지의 Nucleus receptor가 관여하게 된다.
 
 | 유도 메커니즘   | CYP isoform    | 특징       |   
@@ -47,42 +53,43 @@ opts_chunk$set(echo=FALSE)
 해당 과정은 가역적이나 기존의 형태로 돌아가기에는 비교적 느리다. 효소 단백질의 생성 속도는 전사 속도가 증가할 수록 증가하게 된다. 
 이러한 생성 속도의 증가로 인해서 유도체의 작용이 일정할 때 효소 단백질의 양은 새로운 평형에 도달하게 되며 해당 과정은 주로 효소 단백질 고유의 반감기에 의해 좌우된다. 
 
-### 유도체에 의한 효소 
+### 유도체에 의한 활성효소의 변화
 
-효소는 일반적으로 turnover model을 따른다(그림\@ref(fig:turnover)). 따라서 유도체가 없는 상황에서는 아래 식 \@ref(eq:eq10-1)에 의해 생성속도(R~syn~)와 제거속도(k~deg~ * Enz(0))가 동일한 동적 평형 상태를 이루고 있다.  
+효소는 체내에서 평형을 이루고 있으며 아래 그림과 같이 일정한 생성속도와 제거속도에 의해 결정되는 turnover model을 따른다(그림 \@ref(fig:turnover)). turnover model을 표현한 식은 아래 식\@ref(eq:eq10-1)과 같으며 유도체가 없는 상황에서는 생성속도(R~syn~)와 제거속도(k~deg~ * Enz(0))가 동일한 동적 평형 상태($\frac{dEnz(t)}{dt}$)를 이룬다. 
+
+```{r turnover, fig.cap = "(ref:turnover)", echo = FALSE}
+knitr::include_graphics('media-07/turnover.png')
+```
+(ref:turnover) 체내의 효소가 따르는 Turnover 모델의 형태
 
 \begin{equation}
 \frac{dEnz(t)}{dt} = R{syn} - k{deg} \cdot Enz(t)
-(\#eq:eq10-1)
+(\#eq:eq10-1) 
 \end{equation}
 
-CYP2E1를 제외한 대부분의 경우, 유도체는 효소의 생성속도를 증가시키기 때문에 R~syn~가 커지게 되며 CYP2E1의 경우, 유도체는 효소 안정화를 통해 제거속도를 감소시키기 때문에 k~deg~가 작아지게 된다. 
-생성속도를 증가시키는 경우가 대부분이기 때문에 이러한 경우만 자세히 살펴보자면 이러한 생성속도의 증가는 유도체의 유도 능력과 농도에 영향을 받게 되기 때문에 아래의 식 \@ref(eq:eq10-2)을 통해 유도로 인한 단백질의 증가를 표현한다. 
+유도체는 수용체와의 결합을 통해 효소 mRNA의 전사 속도를 증가시키기 때문에 해당 식의 생성속도(R~syn~)를 증가시키는 것으로 볼 수 있다. 이러한 생성속도의 증가 정도는 유도체의 유도 능력(E~50~, E~max~)과 농도에 영향을 받게 되기 때문에 일반적으로 아래의 식\@ref(eq:eq10-2)과 같이 유도로 인한 생성속도의 증가를 표현한다. 
 
 \begin{equation}
 \frac{dEnz(t)}{dt} = R{syn} \cdot (1 + \frac{E{max}C(t)}{EC{50} + C(t)}) - k{deg} \cdot Enz(t)
 (\#eq:eq10-2)
 \end{equation}
 
-생성속도를 증가시키는 경우 turnover model의 특성상 새로운 동적 평형에 도달하는 대에 걸리는 시간은 k~deg~에 의해 결정되며 이러한 k~deg~값은 효소의 종류에 따라서 다르다. 
+단, 예외적으로 CYP2E1의 경우, 유도체는 효소의 안정화를 일으키므로 제거속도(k~deg~)를 감소시키는 방향으로 작용한다. 
+
+<!-- 생성속도를 증가시키는 경우 turnover model의 특성상 새로운 동적 평형에 도달하는 대에 걸리는 시간은 k~deg~에 의해 결정되며 이러한 k~deg~값은 효소의 종류에 따라서 다르다.  -->
 
 
-## In vitro study 디자인
+## 후보 물질의 유도 가능 여부 평가를 위한 In vitro study 디자인
 
-후보 물질의 유도체로써의 작용 가능성과 작용 크기에 대한 평가는 약물의 개발 과정에 따라서 다르게 이루어진다. 
-기본적으로 초기 약물 개발 단계의 경우 스크리닝으로써의 유도 assay가 이뤄지며 주로 96-well plated HHEP 방법이 사용된다. 이 방법은 약물의 구체적인 약동학 정보가 나오기 전에 유도체로서의 가능성 정도를 타진해 보고자 수행되기 때문에 3~4가지의 정해진 농도로 2~3일 정도 처리해서 mRNA 또는 enzyme의 fold change 정도를 확인한다. 스크리닝 단계에서는 주로 CYP3A4 에 대해서만 시험하게 된다. 
+후보 물질의 유도체로써의 작용 가능성과 작용 정도에 대한 평가는 대부분 해당 물질의 개발 과정에 따라 다르게 이루어진다. 
+기본적으로 초기 개발 단계의 경우 스크리닝을 위한 assay가 이뤄지며 주로 96-well plated HHEP 방법이 사용된다. 이 방법은 물질의 구체적인 약동학 정보가 나오기 전에 유도체로서의 가능성 정도를 타진해 보고자 수행되기 때문에 3~4가지의 정해진 농도로 2~3일 정도 처리해서 mRNA 또는 enzyme의 fold change 정도를 확인한다. CYP3A4는 CYP2C9 및 CYP2B6와 작용하는 수용체와 메커니즘이 유사하기 때문에 스크리닝 단계에서는 주로 CYP3A4 에 대해서만 시험하게 된다. 
 
-약물의 개발 단계가 진행되면서 약물의 유도체로써의 작용에 대한 세밀한 평가가 이루어지게 된다. 이 경우는 3명 이상의 donor로부터의 hepatocyte를 주로 이용하며 positive/negative control이 사용된다. positive control로는 주로 rifampin이 사용된다. 이 단계에서의 평가는 주로 RT-PCR을 이용하여 vehicle control 대비 증가한 mRNA fold induction을 보게 된다. Enzyme activity의 경우 약물의 억제 작용이 혼재되어 나타날 수 있기 때문에 잘 선호되지 않으나 1E2의 유도 가능성이 있는 경우 이는 효소의 안정화를 확인해야 하기 때문에 이 방법을 사용하게 된다. 
-유도체의 경우 주로 3일 이상 관찰하며 사용하는 농도는 약물의 solubility, hepatocyte에 대한 toxicity와 약동학 정보를 이용한 예측되는 최대 노출 정도 (C~max,u~)에 대한 30~50배 값을 이용하게 된다. 유도체에 대한 시험이 끝나면 세포 독성을 확인하게 되며 만약 3일 이상 세포가 살아있지 않으면 관찰 기간을 축소하거나 조금 더 낮은 농도를 사용하게 된다. 
+후보 물질의 개발 단계가 진행되면서 유도체로써의 작용에 대한 세밀한 평가가 이루어지게 된다. 이 경우는 3명 이상의 사람 간세포를 주로 이용하며 음성 대조군과 양성 대조군이 모두 사용된다. 양성 대조군으로는 주로 rifampin 을 사용하나 평가되는 효소에 따라 다른 물질일 사용될 수 있다. 이 단계에서 주로 RT-PCR을 이용하여 vehicle control 대비 증가한 mRNA의 fold change 크기를 통해 유도 능력을 평가한다. mRNA가 아닌 활성화된 효소의 fold change의 경우 약물의 억제 작용이 혼재되어 나타날 수 있기 때문에 잘 선호되지 않으나 CYP1E2에 대한 유도 가능성이 있는 경우 효소의 안정화를 확인해야 하기 때문에 enzyme을 측정하게 된다. 
+유도체의 경우 주로 3일 이상 관찰하며 사용하는 농도는 약물의 용해도, 간세포에 대한 독성과 약동학 정보를 고려하여 결정한게 된다. 특히    예측되는 인체 내 최대 노출 정도 (C~max,u~)에 대한 30~50배 값을 이용하게 된다. 유도체에 대한 시험이 끝나면 세포 독성을 확인하게 되며 만약 3일 이상 세포가 살아있지 않으면 관찰 기간을 축소하거나 조금 더 낮은 농도를 사용하게 된다. 
 집단내에서 CYP발현 정도와 반감기 등은 사람간 차이가 있기 때문에 유도 결과 역시 donor에 따라 다르게 나타날 수 있으며 assay environment에 따라도 다르게 나타난다.  
 
 
 
-항체(Antibody, Ab)는 면역글로불린(Immunoglobulin, Ig)로도 지칭되며 특정 세포나 단백질과 같은 항원(Antigen)을 특이적으로 인지하여 면역반응을 유발한다. 대부분 당단백질로 구성되어 있으며 주로 체액성 면역반응에서 B 세포의 활성화를 통해 생산되어 항원을 중화(neutralization)하거나 옵소닌화(opsonization)를 통해 제거를 유도하는 역할을 한다. \index{항체} \index{항원}
-
-항체의약품은 이와 같이 항원, 즉 타겟수용체에 특이적으로 결합하는 항체의 특성을 이용한 의약품으로 일반 의약품에 비해 타겟 외 결합에 의한 위험성이 떨어지고 적은 량으로 비교적 큰 효과를 낼 수 있다. \index{항체의약품}
-
-동물의 면역계가 생산하는 항체의 종류는 종마다 약간의 차이가 있으며 사람의 면역계는 Y unit의 개수와 heavy chain의 타입에 따라 5가지의 아형(Isotype)의 항체를 생산한다. 아형 별로 그림 \@ref(fig:antibody-isotype)과 같이 다양한 구조를 가지고 있고 이에 따라 체내 분포와 기능에 있어서 차이가 존재한다. 이 중 IgG는 인체에서 70~85%를 차지하는 가장 흔한 아형으로 150 kDa으로 비교적 분자량이 작고 항원특이적이며 Fc 구조로 인해 아형 중에 반감기가 20~24일 정도로 가장 길기 때문에 항체의약품으로 가장 많이 사용되며 특히 IgG4를 가장 많이 사용한다. \index{항체의약품}
 
 ```{r antibody-isotype, fig.cap = "(ref:antibody-isotype)", echo = FALSE}
 knitr::include_graphics('media-07/antibody_isotype_pic.png')
