--- a/05.Rmd
+++ b/05.Rmd
@@ -1,19 +1,9 @@
----
-subtitle: |
-  신약개발을 위한 실전 약동학​ II
 
-  (Phamacokinetics for pharmaceutical scientists​)
----
-
-**6.** 후보 물질의 대사 억제 특성 평가
+# 후보 물질의 대사 억제 특성 평가
 
 이소진
 
-https://clovanote.naver.com/s/Cuv2DSq5jQg4s
-
-비밀번호: vjtbs6
-
-**6.1 개요**
+## 개요
 
 이 장에서는 개발하는 약물이 과연 inhibitor 역할을 하는 약물인지
 확인하고, 어떤 inhibition 특성을 가지는지 확인하는 방법을 살펴보기로
@@ -21,8 +11,6 @@ https://clovanote.naver.com/s/Cuv2DSq5jQg4s
 과 Time-dependent inhibition으로 나뉜다. 각각의 inhibition 종류에 따른
 inhibition assay 실험 방법과 이를 통해 얻은 데이터를 해석하는 방법,
 그리고 이 정보를 DDI prediction에 적용하는 방법에 대해 살펴보겠다.
-
-**6.2 Introduction**
 
 DDI 평가는 중요하며, 특히 여러 종류의 약물을 장기간 병용 투약하는
 만성질환을 가진 환자에서 조심해야한다. Inhibitior 역할을 하는 약물은
@@ -40,1040 +28,5 @@ height="1.6979166666666667in"}
 약물농도
 
 Victim (substrate) : Drug whose PK is affected
-
 Perpetrator : Drug that is affecting PK of victim
 
-네 저는 큐피터 이소진입니다. 이제 이전 강의에서 후보 물질을
-섭스트레잇으로서 어떻게 평가하는지 알아봤고요 오늘 이번 첫 시간에는 우리
-약물이 이니비터로의 역할을 하는 약물인지 그렇다면 어떤 이니비션 특성을
-가지고 있는지
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 100:20
-
-어떻게 평가하는지에 대한 내용을 설명드리도록 하겠습니다. 이니비션의
-종류는 크게는 두 가지예요. 리버서블 이니비션 타임 디펜던트 이니비이션이
-있습니다. 그리고 이 종류에 대해서 설명을 드릴 거고요 각각의 이니베이션
-에세이 실험 방법 그리고 그때 얻은 데이터를 해석하는 방법
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 100:41
-
-대략 설명드리도록 할게요 그리고 각각 얻은 inivition 파라미터들을 ddi
-pridection에 어떻게 적용하는지에 대해서 살펴보도록 하겠습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 100:54
-
-ddi 평가는 당연히 중요하고요 특히 여러 약물을 동시에 장기간 복용하는
-크로닉 컨디션 가진 환자분에서 조심해야 됩니다. 이제 이니비터와 빅텀
-드러그를 같이 주게 되면 체내 약물 농도가 높아지게 되겠죠. 그래서
-에드버스 트로그리액션이나 톡시시티가 발생할 수 있고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 101:15
-
-따라서 ddi 평가는 ib2로 adm이 스터디 시작에서부터 함께 탐색되는 걸
-추천드립니다. 이는 fda 파이널 가이던스 2020년에 새로 나온 것 그리고 ema
-가이드라인에서도 이미 추천된 내용이죠. 이거 어제 대략 살펴봤죠. 그리고
-이제 ddi 인비트로 ddi 평가가 전체 인비트로 adm의 스터디에 어디에 있는지
-한번 살펴보도록 하겠습니다.
-
-In vitro 단계의 DDI 평가는 ADME 에서의 metabolism study에 해당하는
-부분으로, metabolic DDI 평가에는 inhibition 과 induction 평가가 있다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 101:45
-
-ddi 평가는 adm에서 메타볼리즘 스터디에 한 부분이고요 이거 레이저
-포인트로 한번 써볼게요 메타볼리즘 스터디 한 부분이고 ddi 평가 안에는
-대표적으로 이니비션 인덕션 이렇게 있습니다. 그리고 요 앞에 두 개는
-우리가 전 시간에 배운 내용들이죠. 이제 이외에는 리액션 피노 타이핑이라고
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 102:09
-
-우리 약물이 우리 약물 대사에 어떤 엔자임이 얼마나 관여하는지 살펴보는
-시험이 또 있습니다. 이때 우리가 또 ddi 계산에서 활용하는 fm 값이
-얻어지는 실험이라고 생각하시면 됩니다. 지금은 그 이니미션 스터디에
-대해서 더 자세히 살펴보도록 하겠습니다. 인비트로 이니비션 스터디는 초반
-약물 디스커버리 단계에서부터 수행이 돼야 되고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 102:35
-
-얻어진 값들이 이제 쭉쭉 사이클 드러그 디벨로먼트 사이클이 진행되면서 그
-값들이 활용되어져야 됩니다. 디스커버리 단계에서 이제 드러그 리드
-옵티마이션 단계에서는 굉장히 많은 수의 캐니데인 약물이 있고 이게
-이니미터인지 스크리닝 하는 단계가 필요하고요 이때는 컴바인드
-어프로치라고 해서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 103:00
-
-다양한 snnjme을 함대에 넣고 하나 1 sa로 iinivitiz 평가 대략하는 방법이
-있고요 그리고 이때 이제 포턴트한 타임 디펜던트 이니비터는 걸러내는 게
-좋겠죠. 그렇게 진행을 할 수 있고 이후에 조금 더 디벨로먼트 단계로 와서는
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 103:21
-
-몇 개의 리드 컴파운트만 가지고 있을 텐데 이때 조금 더 디테일한 정보를
-얻는 이니메이션 실험을 진행하게 됩니다. 임상에 가까워질수록 inbitro
-nibition sa들은 glp와 같은 수준에서 수행되기를 권고하고 있고요 하지만
-이건 법적으로 리퀘어드 된 사항은 아닙니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 103:47
-
-대부분 약물 대사에는 페이즈1 바이오 트랜스포메이션이 거치고요 그중에
-옥시데이션이 굉장히 많이 약물 대사에 관여를 하게 됩니다. 그중에
-옥시데이션을 시키는 엔자임이 바로 사이토크롬 p4피피티고요 이 njm은 이제
-h파토사인 엔도 이 아래 로케이트 타고 있죠 그리고 이 10을 좀 더 자세히
-살펴보면
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 104:13
-
-휴번 리버에 이와 같은 다양한 c 아이소품들이 존재합니다. 이 위에 파이
-차트는 이제 프레벌런스고요 실제 리버 내에 각 10이 존재하는 비율은
-이렇지만 실제로 드러그 메타볼리즘에 중요하게 관여하는 1 그 중요도는
-다릅니다. 실제 존재하는 비율과는 그래서 예를 들어서 3a 플러스 2d6 이 두
-가지의 신만 하더라도
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 104:40
-
-커머셜리 어벨럽을 한 80% 약물의 드러그 메타볼리즘에 관여하는 것으로 이미
-알려져 있어요. 그래서 fda에서 보기로 이제 권고하는 메이저 십은 이렇게
-7가지 종류가 있습니다. 본격적으로 이니베이션 종류 살펴볼 텐데요.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 105:00
-
-리버서블 이니비션 그리고 메카니즘 베이스 리니비션이 있습니다. 리버서블
-이니비션은 다이렉트 이니비션이라고도 불리우고요 이니비터와 엔자인
-바인딩이 너무 코벨런트하게 바인드 하는 경우고요 바인딩 되고 나서 빠른
-시간 레피드 디소시에이션이 일어납니다. 그리고 바로 nd 액티비티가
-리스토어 됩니다. s스트레이스를 굉장히 많이 줄 경우에 이니비이션이 리버스
-될 수도 있고요 또는 이건 다른 말로 하면
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 105:27
-
-섭스트레이 농도가 굉장히 높을 경우에는 리버서블 이미터의 영향이 아주
-작아진다고 생각하면 되겠습니다. 그다음은 메커니즘 베이스도
-이니비션이고요 우리가 보통 인터체인저블하게 타임 디펜던트
-이니비이션이라고도 불리우는데 이거는 완전히 동일한 단어는 아니고요 타임
-디펜던트 이니비션이 조금 더 큰 범주라고 생각하시면 됩니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 105:49
-
-타임티 펜더티 이니비이션은 이제 프리 인큐베이션 타임을 거치면 이니베이션
-포텐시가 조금 더 좋아지는 그런 이니비션일 경우를 그렇게 불리우고요
-메커니즘 베이스드 이니비션은 타임 디펜던트 이니비션의 섭셋 한 종류라고
-생각하시면 됩니다. 메커니즘 베이스드 이니비션은 이제 엔자임과 이니비터가
-결합을 해서 리액티브 메타볼라이트로 생성을 해서 이제 엔자임이 더 이상
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 106:19
-
-액티브하지 않게 인액티브 된 상태를 이야기합니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 106:28
-
-이렇게 에세이들이 핵심 에세이들이 있는데요. 리버스브리 이니베이션을
-알아보기 위해서는 먼저 ic ppt 값을 구하는 에세이가 있고요 그다음에 이
-결과를 바탕으로 inivation constent ki를 구하는 sa를 수행합니다. 그리고
-타임 디 펜더트 이니비이션 sa 같은 경우에는 싱글 포인트 세라고 그래서
-이니비터 농도를 하나로만 수행하는 간단한 실험을 먼저 거쳐서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 106:54
-
-tdi 즉 타임 디펜던트 이니미터인지 확인을 하고 그다음에 레이터
-스테이지에서 조금 더 복잡하고 디테일한 icppt를 구하는 실험을 합니다. 그
-icppt 구하는 실험을 해서 tdi인 게 확실해지면은 그다음 이제
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 107:14
-
-이니비션 키네틱 파라미터들 k 인액티베이션 그리고 ki를 구하는 실험을 하게
-됩니다. 이와 같이 세 종류가 있다고 생각하시면 되고요 리버서블은 대략
-크게 두 종류가 있습니다. 그리고 일단 리버서블 이니베이션 sa를 먼저
-시작하기 전에 이 icppt를 구하는 실험을 하기 전에 저희가 지난주에 어제
-이제 말씀 나눴던 섬 스트레스 추레이션 익스페리먼트를 먼저 해야 돼요
-이거는 메타볼릭 스테빌리티 테스트의 일종이었죠.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 107:49
-
-그래서 sustr cncn트레이션에 따른 메타볼릭 포밍 레이트를 구한
-실험이었습니다. 그래서 이때 nj 키네틱 파라미터 vm km을 기본적으로 구하게
-되죠. 메터릭 스태빌리티 스터디에서 그래서 그 얻어진 km 값을 바탕으로
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 108:10
-
-그거를 활용해서 우리는 이제 ic ppt 디터미네이션 실험 디자인을 합니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 108:19
-
-간단하게 리버서블 이니비션의 세 가지 종류가 어떻게 다른지 그림으로
-설명드릴게요 컴피디티브 이니비션이 리버서블 이니비션 중에 가장
-대표적이고요 이니비터와 섭스트레잇이 이제 세임 액티브 바인딩 사이트를
-놓고 컴퓨트하는 겁니다. 이니비트와 엔자임이 결합하면 이제 더 이상 기존
-엔자임 반응 프로덕트는 나오지 않고요 기존의 프로덕트가 생성이
-불가합니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 108:46
-
-그리고 이 생성이 불가한 이니비션의 임팩트는 km에 들어가게 되고요 이걸
-조금 더 이따 뒤에 설명드리도록 할게요 그리고 컴패니티 미니미션의 경우
-이제 이니 비터의 농도가 증가할수록 km 값이 증가하게 되고요 따라서
-클리어런스는 이 s를 제외한 이 수식
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 109:12
-
-근데 km 플러스 s 오버 vm이 되겠죠. 클리어런스 인트린직은 이니비션 농도가
-증가할수록 감소가 되고 따라서 auc는 증가하게 됩니다. 이 경우에
-섭스트레이 농도가 커질수록 이니비터의 영향은 줄어들게 됩니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 109:31
-
-던 컴패티티브 이니비션이 그다음이고요 이거는 이니비터가 프리 엔자윤과도
-바인딩하고 그리고 nz 앤 플러스 s스트레이 콤플렉스에도 모두 바인딩할 수
-있습니다. 런 콤펙티브 이니미터일 때는 v 맥스도 감소하고 v맥스는 감소하고
-km은 그대로라고 생각하시면 됩니다. 이것도 조금 이따가 더 설명드릴 거고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 109:55
-
-선생님 죄송 그리고 포인터로 마우스 옵션 좀 변경해 주시겠어요. 네네
-보이실까요. 보이실까요. 선생님 네 보입니다. 그리고 그다음은 언 콤패드티
-리미션이고요 이거는 이니 비터가 이제 앤자인 플러스 섭시 트레이
-콤플렉스에만 바인딩하는 경우예요.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 110:17
-
-이 경우는 사실은 굉장히 언뉴주얼하고요 드러그 메타볼리즘 리액션에서 많이
-관측되지 않는 이니베이션 종류입니다. 그래서 ancopt티브 이니비터일 때는
-km vx가 모두 감소를 하고요 하지만 이 라 더 자세히 설명드릴 건데 이
-기울기는 이니비터의 농도에 따라서 달라지지가 않아요. 이 기울기는 vm 오버
-kmm으로 인트리즈 클리어런스를 나타냅니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 110:49
-
-이게 이제 이니베이션의 특성이고요 낮은 섭스트레이에는 클리어런스의
-영향이 거의 적고 ddi가 없게 나타난다고 생각하실 수 있습니다. 아까
-보여드린 것 같이 이전에 nn cond 미니미션과 an conbatdiv 니미션은 사실
-우리가 sup strat에 따른 mtboly 생성 prat을 그려봤을 때 구분이 잘 가지를
-않아요.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 111:16
-
-그래서 따라서 조금 더 이해하기 쉽게 비주얼라이제이션이 잘 될 수 있는
-에디 호프티라는 플렛으로 바꿔서 이 둘을 구분하게 되어 있습니다. fda 이제
-가이던스에 따라 sa를 이제 설명드리도록 할게요 제일 처음으로 리버서블
-이니비이션에 ic pt를 구하는 에세이고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 111:41
-
-fda 가이던스에 따라 7가지의 메인 1 is 폼을 평가하는 걸 추천드립니다.
-따라서 7가지의 ic ppt 값이 나오겠죠. 그리고 리버서블 이니브이션n sa는
-c뿐만이 아니라 다른 n자임 이니브이션 포텐셜을 평가할 때도 동일한
-스킵으로 진행이 됩니다. 이 실험은 다양한 패스트 컴파운드 즉 다양한
-이니미터 농도에서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 112:07
-
-mtvoly fomation이 얼마나 되는지를 측정을 하게 됩니다. 그래서 결국
-invinen concentration에 따라 베타볼라 포메이션이 얼마나 이니비션
-됐는지를 플라팅하게 되고 이때 50% 이니비션을 나타낸 값을 우리는 ic
-피티라고 말하고 이때 이 값을 구합니다. 자세히 실험 오벌 뷰를 살펴보면
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 112:34
-
-이니비터 플러스 섭스테레이 플러스 휴먼 리보어 마이크로좀 그리고 코
-팩터를 같이 넣어서 짧은 시간 인큐베이터 하는 거고요 그래서 이와 같은
-플러스를 얻게 됩니다. 이때의 섭스트레이 농도는 우리가 맨 처음. 메타볼릭
-스테빌리티 테스트에서 얻었던 km과 비슷한 수준으로 설정을 하고요 그리고
-inviter concentration은
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 112:59
-
-ki 주변이면 좋겠지만 아직 ki를 모르는 시점이니까 대부분 그냥 일반적으로
-01에서부터 25 마이크로 몰r 레인지 정도로 잡는다고 합니다. 그리고 이제
-인바이오먼트로는 휴먼 리버 마이크로좀이 주로 사용이 되고요 이게 이제
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 113:21
-
-인 비보 시추에이션을 가장 잘 애프리젠트 할 수 있고 사실 리콤비넌트
-엔자임 같은 경우는 atft셜하고 대부분의 경우 nj임들이 오버 익스프레스도
-많이 돼 있다고 합니다. 그래서 휴먼 리버 마이크로존에서 이제 이거를
-가지고 사용하는 걸 추천을 드리고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 113:41
-
-이렇게 해서 얻은 이 ic ppt 값을 어떻게 해석할 수 있냐 보면은 1 마이크로
-몰라 보다 ict가 작으면 포텐트 이니비터라고 보고요 그리고 1 14이면은
-모더의 이니비이션 10 이상이면 위크 이니비터라고 대략 구분할 수 있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 114:01
-
-이렇게 사용될 수 있는 각 10에 따라 사용될 수 있는 s시트레이과 파지티브
-컨트롤 인포메이션들이 있고요 이것들은 이제 fda 가이던스에도 있습니다.
-이거는 제가 다른 실험 웹사이트에서 얻은 것들이고요 그리고 특별하게 1
-아이소폼 3a
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 114:21
-
-폼 중에 3 4는 액티브 바인드 사이트가 1개 이상으로 알려져 있어요. 그래서
-따라서 두 개 이상의 s시트레이으로 실험하는 거를 추천드리고요 대표적으로
-테스토스테론이랑 미다졸램으로 같이 실험하는 걸 추천드립니다. 그리고 각각
-icppt를 구하고 그중 낮은 icppt 값을 씁니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 114:46
-
-이제 icppt를 sa를 해서 icppt 값을 구했으면 그다음은 inivion cons턴스 ki
-값을 구하는 실험을 하는데요. 미리 산출된 그 icppt 값은 실험에 적합한
-이니미tr concentration을 구하기 위해 사용돼요 그래서 요 icppt 값을
-기반으로 이니 비트 컨센트레이션을 설정을 하고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 115:13
-
-이 실험은 이제 다양한 서스트레이 농도 이니비터 농도에서 진행이 되는
-실험입니다. 그래서 얻는 그래프는 이제 mtbly fomation lit valsis supstr
-concentration이 되겠습니다. 그리고 이제 가로축을 조금 modify 해서 리액션
-레이 나누기 섭스리 컨센트레이션 하면 이와 같은 왼쪽 그래프가 오른쪽과
-같이 변형이 되고요 이 두 가지 종류의 그래프를 주로 많이 봅니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 115:44
-
-그래서 ki는 우리가 이니비션 컨스턴트라고 알고 있고요 이거는 이거에
-대해서 간단히 설명드리면 인트린지 컨스턴트라고 합니다. 이니비터가 앤덴과
-바인드 하는 어피니티를 나타내고요 또는 이니비션의 포테시를 나타낸다고도
-이야기합니다. 이와 반대로 ic ppt 값은 어떻게 다르냐 그 값의 특성은
-무엇이냐 생각해 보면 icppt 값은
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 116:12
-
-일단 익스트린지 컨스턴트고요 랩 툴의 베리어빌리티가 있는 값입니다.
-그래서 따라서 리프로디 소을 하지 않을 수도 있고요 섭스트레이스의 종류
-그리고 섭스트레이스의 컨센트레이션 그리고 션 인큐베이션 타임에 따라서
-달라질 수 있는 값이 ictft입니다. 그래서 따라서 ki는 특정 이니비터와 nj의
-고유한 값으로 생각할 수 있고요 어떤 ss트레이을 사용하든 달라지지 않는
-값입니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 116:41
-
-케이아이는 더 리프로 디서블 하고 더 릴레이어블 한 값이라고 생각할 수
-있고요 인 디보 디비아 필요할지 알려주는 조금 더 정확한 값으로 생각할 수
-있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 116:58
-
-이제 ki를 구하는 에세이의 오벌뷰고요 여기에서 이제 얻어지는 요 플라슨
-아까 리스펀스 나누기 섭시 트레이 오버 리스펀스 커브이고요 이거는
-콤패렉티브 이니비이션일 때의 예시고요 이때 이미 알려진 모델이 있습니다.
-이와 같이
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 117:21
-
-리액션 레잇은 에스 섭스트레임 더하기 케이엠 모가 브이 맥스 그리고 에스
-이렇게 기존에 알려져 있는 리액션 레이에 다 이제 임팩트 이니비션의
-임팩트가 km에 이렇게 들어가 있는 거라고 생각하시면 될 것 같습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 117:44
-
-그래서 컨센트레이션은 sc 컨센트레이션은 km 주변으로 설정을 하게 하면
-되고요 이 실험에서 이니비터의 컨센트레이션은 ic ppt 위주로 실험을 하면
-됩니다. 그리고 이렇게 해서 이 그래프를 얻고 이제 리그레션을 통해서
-모델을 피팅한 다음에 케아를 얻을 수 있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 118:09
-
-또는 더 간단한 방법들도 있고요 그래서 요 얻은 ki를 가지고 이제 fda
-가이던스에 언급하고 있는 스탠팅 모델의 r 값을 구하는데 바로 넣어서
-사용을 할 수 있고요 또는 메카니스틱 스테틱 모델 ki 값 또는 pbp k 모델에
-사용하는 ki 값으로도 입력되어서 사용될 수 있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 118:32
-
-그 케이아이밸류를 리그레션으로 그 그래프를 통해서 구할 수도 있다고
-말씀드렸고요 또 굉장히 간단한 방법으로는 icpipt value 얻은 것을 가지고
-이렇게 단순하게 계산을 해서 ki 값을 얻을 수도 있습니다. 우리가 이 실험을
-수행하는 구간은 사실 퍼스트홀더 키네틱이 가장 잘 관측되는 구간에서
-실험을 하고 싶고
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 118:57
-
-그때는 spstr concetration이 km과 비슷하거나 작을 때예요. 그래서 살펴보면
-우리가 대부분 ki는 icppt랑 비슷하거나 또는 ki는 icppt를 2로 나눠서
-진행하는 경우들이 많습니다. 그리고 그다음은 이제 그래픽 컬리
-칼큘레이터을 한 이와 같은 다양한 라인 비버 버크 플라 등을 만들어서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 119:24
-
-이거는 각 세로축 y축을 역수로 치환을 해서 직선으로 만들어주는 플라이고요
-이렇게 단순한 형태로 그래프로 만들어서 이때의 이제 x extra폴레이션한
-인터 세프트가 ki와 동일하다라는 계산 식으로
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 119:43
-
-이렇게 그래프로 그려서 계산을 할 수도 있습니다. 네 그래서 ddi ki 값을
-얻어진 것을 이렇게 stading mode에는 넣을 수도 있고요 그리고 메카니스틱
-스테틱 모델에도 이렇게 들어갈 수 있다는 거 염두에 두셨으면 좋겠습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 120:04
-
-그리고 중요한 게 사실 1 플러스 kio버 i 이 값이기 때문에 이 값 으로만도
-ddi 프리딕션 당연히 할 수 있고요 근데 지금 기준에서 이거는 언바운드된
-옛날 기준이라고 생각하시면 돼요 지금은
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 120:22
-
-아이오버 ki 요 값이 다 언바운드 언바운드 값이고요 이 기준이 0.0
-이상이면은 포텐셜 dbi가 있어서 폴더 ddi 인베스티게이션을 더 해라 이렇게
-나와 있습니다. 이렇게 다양한 리버서블 리니미션 모델들이 존재를 하고요
-아까 우리가 ki 실험에서 얻은 플라시 딕썸 플라 그리고 에디 호스티
-플라시라고 생각하시면 돼요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 120:52
-
-살펴보면 이 첫 번째 박스가 컴패드티브 인디뷰션에 해당되는 박스고요 두
-번째는 나 컴패드티브 세 번째 언 컴패드티브입니다. 각각 플러스를 보면은
-우리가 원하는 값들을 바로 구할 수 있게 돼 있어요. 딕슨 플러스 우리가
-메타블릭 스태빌리티 스터디에서 얻은 섭시처리 세추레이션 플라이 기본적인
-거라고 생각하시면 되고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 121:18
-
-두 번째 플라은 요 가로축만 변형한 거죠. 그래서 에디오프티 플라에서 와
-인터 세트는 브이 맥스고요 그리고 슬로은 km입니다. 그리고 이거에 다
-역수를 취한 이 라이브 워 버크 플락 같은 경우에는 와이 인터세트는 이제
-역수를 취했으니까 원 오버 브이 맥스 값이고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 121:42
-
-그리고 엑스 인터셉트는 원 오버 케이엠 값이 됩니다. 그리고 기울기는
-케이엠 오버 브이 맥스 값이 되겠습니다. 이렇게 prad를 변형해가면서 원하는
-값들을 구할 수 있다고 생각하시면 되고요 그리고 이제 콤패드티브
-이니베이션일 때가 저희가 항상 주요하게 보는 리버서블 이니베이션 타입이기
-때문에
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 122:08
-
-cnbctive inivition의 임팩트는 km에 가해져서 전체적으로 클리어런스에
-해당되는 이 포션 이 감소를 하고요 왜냐하면 km이 증가되니까 그래서 auc는
-결국은 증가된다고 생각하시면 될 것 같습니다. 넌 콤패티티브 이니비션일
-때는요 브이맥스가 감소를 하고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 122:30
-
-그리고 ann cpadtive inivision일 때는 km vimax 모두 감소를 합니다. 그리고
-또 언 cpadtive랑 난 콤패디티브는 사실 첫 번째 딕슨 플러스로는 전혀
-구분이 가지 않아요. 그 다른 이와 같은 변형 플라을 사용해서만 구분을 할
-수 있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 122:52
-
-그다음은 타임 디펜던트 이니비이션이에요. 타임 디펜던트 이니비이션은 더
-심각한 결과를 나타낼 수 있는 이니베이션이고요 애니비터 엔자임 콤플렉스가
-바인드 해서 이제 엔자이밍 유넥티베이션 됩니다. 그리고 다시 그 액티비티를
-리스토어 하기 위해서는 새로 njm이 리 신티 사이즈 돼야 됩니다. 그래서
-시간이 걸리는 다시
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 123:16
-
-enjm이 능력을 회복할 때는 시간이 걸리는 프로세스고요 meta vly과 즉 이제
-미니비터와 엔자임이 코베일런트 본딩을 하게 됩니다. 그래서 이비버스더블
-인액티베이션을 시키고요 이때 active matvolit이 생깁니다. 그래서 이로
-인해서 njme이 intiv 되는 것을 이제 메카니즘 베이스d inivition이라고
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 123:41
-
-말합니다. 따라서 드러그 디스커버리에서 최대한 빠르게 이와 같은
-이니메이션을 걸러내고 싶기 때문에 빠르게 탐색하는 걸 추천드립니다.
-이거는 이제 파마스리컬 컴퍼니들을 대상으로 tdisa 어떤 것들을 하고 어떤
-게 comprectice인지 정리한 논문이고요 거기에서 보면 tld afrarc를 쓰고
-있어요.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 124:08
-
-대부분 세 가지의 tdi 에세이를 진행하는데요. 첫 번째로는 싱글 포인트 세이
-진행을 하고요 이거는 이제 리버서블 십 이니비이션 sa와 페렐렐하게도
-진행을 할 수 있습니다. 하지만 revo sbs sa를 요거 이전에 먼저 하기를
-추천을 드리고요 글 포인트 세이는 cadidas
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 124:30
-
-드로 캐디데이 많을 때 진행을 하고요 ict 시프트 sa는 드러그 디빌로먼트의
-뒷스테이지에 진행되는 경우가 많고요 더 많은 정보를 획득하게 됩니다.
-그리고 키네틱 스테디 플레닝 즉 케인네트 케아를 구하는데 요 값들이 또
-사용되게 됩니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 124:51
-
-이거는 이제 tdi 타임 디펜던트 이니비터로 알려진 약물들이고요 그래서 싱글
-포인트 에세이부터 먼저 살펴보도록 할게요 하나의 이니비터 컨센트레이션
-싱글 컨센트레이션으로 이니비터로 진행이 되는 거고요 이때는 굉장히 높은
-농도의 이니비터 컨센트레이션 그리고 높은 농도의 섭스트리 컨센트레이션을
-줍니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 125:16
-
-그래서 리버서블 이니vion이 최소화될 수 있도록 조건을 만들어줘요. 그래서
-타임 dpndet 이니비이션만 일어날 수 있도록 그래서 메타볼라잇이 생성되는
-리스펀스가 측정이 되고요 이와 같은 tdi 수식에 따라서 pcent invition이
-계산이 됩니다. 그래서 타임 dependent invition purcentz가 계산이 되게
-되죠.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 125:43
-
-그다음은 이제 icptsa는 레이터 스테이지에 수행되는 시험이고요 요 시험으로
-리버서블 이니비션인지 이리벌서블 이니비션인지 구분이 가능합니다. 이때
-특징적으로 이 실험에서는 어떤 특성이 있냐면 프리 인큐베이션을 이제
-코펙터 nadph를
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 127:21
-
-그래서 ndph가 있을 때 없을 때 각각의 icbt를 구하게 되고요 이렇게 보통
-nadph를 넣으면 left sift가 일어난다 그러고요 이거는 이제 이니베이션 포텐
-시가 조금 더 mad ph를 넣으면서 셀렸다고 생각하시면 됩니다. 그래서 요
-시프트가 아까 말씀드린 1.5배 이상이면
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 127:48
-
-타임 디펜더트 이니비터로 분류합니다. 그리고 이제 타임 디펜더트 이니비션
-icpt를 구하는 실험을 했으면 그다음에는 이제 타임 디펜던트 이니비터
-키네틱 파라미터인 케이 인넥트와 케아를 구하는 실험을 합니다. kinnet는
-m시v 레이노v nj inactivvation이고요 그리고 ki는 이제 icfipt 같은
-개념이죠.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 128:16
-
-inviter의 concentration이고 kinect의 50 를 만족하는 consentration입니다.
-이때 베리어스 이니비터 컨센트레이션 그리고 다양한 프리 인큐베이션
-타임으로 진행이 됩니다. 이 실험에서 핵심은 프리 인큐베이션 타임을
-다양하게 줬다는 거고요 아까는 30분 딱 하나였고요 지금은 다양한 레인지로
-줍니다. 그래서 얻어지는 플rat은 pussn limain activity rass pre
-inquivation 타임
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 128:49
-
-즉 프리 인큐베이션 타임에 따른 다양한 이니미터의 농도에 따른 퍼센트
-리메이닝 액티비티라고 생각하실 수 있습니다. 그리고 이 기울기를 이제 다시
-y 축으로 만드는 이제 그래프 변형을 다시 한 번 하게 되고요 여기서
-보여드리도록 하겠습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 129:14
-
-말씀드린 대로 프리 인큐베이션 타임을 0에서부터 30분까지 다양하게 잡아서
-실험을 해서 케넥트랑 ki를 구합니다. 이렇게 구하고 여기에서 이제
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 129:32
-
-싱글 포인트 그리고 앞서 수행된 icppt 시프트에서 구해진 이 값들을
-기반으로 이니비터 컨센트레이션을 설정하게 됩니다. 그래서 살펴보면
-이니비터 컨센트레이션 레인지는 대략 한 5개 정도로 컨센트레이션을
-다양하게 잡고요 요 컨센트레이션은 인 액티베이션이 일어나지 않는
-컨센트레이션부터 맥시멀로 일어날
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 130:00
-
-것으로 기대되는 concentration까지 레인nge를 잡습니다. supstric
-concentration은 대략 km의 5배 정도를 잡습니다. 이렇게 해서 얻어진 위의
-플라이 이제 퍼센 리미네이티비티 오버 프리 인큐베이션 타임이었고요 요
-기울기를 세로축으로 만든 그래프가 아래 그래프인데요.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 130:22
-
-따라서 이제 니 이니비터의 concentration 오버e slop이 되겠습니다. 이
-슬로은 k osv라고도 불리고요 이것의 수식이 이제 아 더하기 아 그리고 k
-인넥트 곱하기 아이로 생각하시면 됩니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 130:42
-
-그래서 이 수식을 리그 n 리미어 리그레션으로 애널리시스를 하면은 바로
-당연히 이맥스 모델 같이 케인액티브에이션 컨설턴트와 ki를 구할 수 있게
-됩니다. 그렇게 구할 수 있는 거고요 그렇게 나 리뉴 리그레션 해서 구하는
-방법이 있고요 또는 그렇게 플라즐
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 131:05
-
-역수로 변환을 해서 직접적으로 그래프 익스트라폴레이션해서 x축이 이제 0이
-되는 시점 이때 x 인터세트는 1오버 ki고요 y 인터세트는 1오버 kin
-액티베이션입니다. 이와 같은 수식으로 기반돼서 구해지고요 이렇게
-그래프로도 바로 구할 수 있습니다. 네 이렇게 우리가 각각
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 131:31
-
-리버서블 이니비션과 탈렌디 펜더트 이니비션에서 중요한 파라미터를 얻는
-에세이들을 한번 살펴봤고요 그 얻어진 파라미터들은 리버스 이미베이션 같은
-경우에는 ki였고 타임 디펜던트 디니비이션 같은 경우는 케이 인넥트 그리고
-케이아이였습니다. 그래서 각각
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 131:51
-
-다양한 모델에 사용될 수 있는 값들이고요 스튜팅 모델은 fd 가이드라인에
-나와 있는 가장 간단한 방법이고 r 원 값을 이렇게 넣어서 컷오프 밸류를
-넣는지를 확인하면 되는 방법입니다. 그리고 이제 메카니스틱 스테틱 모델은
-조금 더 한 단계 나아가는 방법이죠. 그래서 이거는 이제 다양한 엔자임에서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 132:17
-
-영향을 종합적으로 평가할 수 있고요 이때 r1을 생각해보면 lers in트린지의
-이제 폴드 리덕션으로 생각할 수 있습니다. 그리고 이것에 이제 역수 ac r
-a유씨 레이쇼가 될 거고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 132:43
-
-그리고 조금 더 복잡하게는 메커니스틱 다이나믹 모델로 시간에 따른 이와
-같은 농도의 변화와 엔자임 다이나믹 변화를 예측하는 pbpk 모델링이
-있습니다. 이게 스테팅 모델이고요 이거 어제 가이드라인에서 쭉 설명 주신
-부분이었죠. 제가 조금 이거를 준비하면서 궁금했던 부분이 ki를 우리는 잘
-구했는데
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 133:07
-
-fda 가이드라인에서는 이제 언 바운드 ki를 사용하라고 하고 있어요. 그래서
-언바운드 ki는 어떻게 구하는지 설명드리도록 하겠습니다. 원 바운드 ki는
-이제 nun spassipc 바인딩이 반영된 값이고요 이때 구하는 수식은
-간단합니다. 이제 nonspassivic binding t macrosomal protin을 flection
-anbund
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 133:33
-
-mic라고 표현을 하면 프렉션 언바운드 mic 곱하기 우리가 얻은 ki를 해주면
-됩니다. 이렇게 해서 구간 값이 케아 유고요 그리고 언바운드 스테디
-스테이스서의 맥시멈 이니비터 컨센트레이션 요것들을 요거가 이제 002가
-넘으면 시그니 뷰 퀀트
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 133:56
-
-해서 folder didi vestigation을 해라라는 겁니다. 그리고 ore drog일 때는
-13a만 관련해서 보고요 r1 것을 구하게 되어 있습니다. 그리고 타임 디펜던트
-이니비션일 경우에는 이와 같은 r2 밸류를 구하게 되어 있고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 134:16
-
-케이옵스가 아까 보여드렸던 슬롭이고요 케이비그는 이미 알려져 있는 각
-엔자엠의 디그레데이션 레이입니다. 이거는 문원 값을 사용하면 되고요
-그리고 요 케이 옵스가 아까 까 말씀드린 그 수십에서 구할 수 있는
-값들입니다. 우리가 리그레션 또는 그 플라팀을 통해서 케이맥트 kimm 값
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 134:39
-
-이건 이미 알고 있죠 ki 가 케이넥 값을 구했으니까 케옵스 값을 바로 구할
-수 있습니다. 그래서 알2 값도 구할 수 있고요 네 이건 좀 정리를 다시 한
-거고 k 디그 값이 이렇게 나와 있고요 사실 k 디그 값도 10 각각의 10에 따라
-굉장히 다양한 레인지로 이미 알려져 있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 135:06
-
-이제 스테틱 모델보다는 조금 한 단계 더 나아간 메카니스틱 스테틱 모델로도
-이제 저희 우리가 얻은 파라미터 값들을 활용할 수 있는데요. 이때는 달라진
-부분이 이제 fm 프렉ection mtbolized by 1이 들어가 있고요 이 fm 값은 전체
-토탈 클리어런스에서 해당 십을 통해서 몇 퍼센트의 클리어런스가 소실되느냐
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 135:34
-
-그 중요도라고 생각하시면 됩니다. 그리고 여기에서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 135:43
-
-사실 맨 처음. 설명드린 stadig appro치보다 조금 더 정교한 방법으로
-생각하시면 되고요 그리고 오rl drg일 경우에는 이제 겉에서의 바이오
-오벨리빌리티가 이니비터를 먹냐 안 먹냐에 따라서 달라지기 때문에 이와
-같은 것에서의 바이오벨리빌리티 상수를 계산을 해서 넣어서 계산을 하게
-됩니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 136:15
-
-이건 다시 정리를 한 거고요 타임 디펜던트 이니비터 원 이니비터일 때는
-이제 이런 시그마가 없이 그냥 하나의 수식으로 계산을 하면 되지만 여러
-가지 이니비터가 인볼브대인 경우에는 이게 더하기로 들어갑니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 136:34
-
-그리고 그다음에 이제 겉이 인볼브 된 경우에는 fgi 오버 fg를 곱해준다고
-생각하시면 됩니다. 여기에서 이 밑에 해당되는 부분이 사실 폴드
-리덕션이죠. clearn스의 폴드 리덕션 요거에 역수의 역수를 취했기 때문에
-사실 폴드 리덕션 클리어런스가 3배 감소됐어요. 해서 폴드 리덕션이 3이다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 137:02
-
-하면 3분의 1에 1 하면 결국 3이거든요. 그래서 ac 레이쇼 즉 auc가
-이니비터를 넣으면서 aoc가 증가된 비율은 3이다. 이렇게 생각하실 수
-있습니다. 이렇게 fda 가이드라인에도 이렇게 메카니스틱 스테틱 모델
-계산하는 방법이 이렇게 나와 있고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 137:25
-
-이제는 한 단계 더 나아가서 메커니스틱 다이나믹 모델에서도 지금 인비트로
-데이터에서 구해진 아 케이맥트 ki 값이 사용될 수 있습니다. 피비 피키
-모델에서는 인트린지 팩터들 익스트리지 벡터들 다 넣을 수 있는 건 넣게
-되어 있고요 그래서 올간을 이렇게 다양하게 나눠서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 137:48
-
-모델링을 할 수 있습니다. 살펴보면 우리가 이건 e그 샘플이고요 시간에 따른
-이제 엔자임 체인지를 나타낸 디프렌셜 이코에전입니다. 여기에서는 이
-예시에서는 이제 타임 디펜더트 이니베이션과 cnpadity inivition이 같이
-들어가 있는 예시에요. 보시면은 dipendent inivition은
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 138:14
-
-ki와 케이넥트로 나타나져 있는 걸 볼 수 있고요 그 안에 또 아 곱해져서
-들어간 요 값이 이제 컴패드티 미니메이션에 해당되는 부분으로 생각할 수
-있습니다. 간단하게 이 수식을 살펴보면 시간에 따라 edm의 변화는 이제 red
-sintesis 마이너스 degrdation 레이트리데이션으로 생각할 수 있고요 요 앞에
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 138:39
-
-신테시스에 더 추가되는 부분은 이건 인덕션 관련된 부분이고요 왜냐하면
-인덕션이 이제 nsm의 cdss를 증가시키기 때문에 그런데 우리는 지금 요
-수식에는 요건 없고요 이 뒷부분에 이제 dgradao을 더 증가시키는 이니비터를
-넣음으로써 더 증가시키는 양식으로 이렇게 수식이 들어가 있습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 139:04
-
-d 셈으로 표현이 돼서 ladave inactivation이 추가가 됩니다. 네 여기까지가
-제가 준비한 부분이고요 인비트로 이니베이션 데이터를 활용을 해서 ddi를
-예측하는 데 굉장히 많은 발전들이 있었고 많은 논리주의와 레퍼런스들이
-쌓였습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 139:26
-
-그래서 적절하게 다 활용을 해서 정확한 인비트로 이디비이션 실험을 해서
-값들을 구해서 활용을 할 수 있을 것 같고요 그래서 이 렉처에서는 이제
-유비트로 이니비션 스터디를 대략적으로 처음에 어떻게 스크리닝을 하고
-나중에 어떻게 자세하게 진행하는지 설명드렸고 다양한 종류의
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 139:52
-
-이니뷰션 타입에 대해서 설명을 드렸습니다. 그리고 그 차이에 대해서 그리고
-각각의 수행되는 sa 그리고 얻어지는 값들 그리고 그게 어떻게 dbi
-프로젝션에 활용될 수 있는지 이건 아주 간략하게 살펴봤습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 140:11
-
-네 제가 준비한 부분은 네 여기까지입니다. 감사합니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-네 소진 쌤 감사합니다. 타볼릭 이니미션에 대해서 많이 공부를
-해보았습니다. 조금 일찍 끝나서 질문을 충분히 받을 수 있을 것 같은데
-질문이 아직 안 올라왔네요. 처음. 들으시는 분 좀 좀 어려울 수도
-있겠습니다. 간단한 질문이라도 기초적인 질문이라도 좋으니까요.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 240:49
-
-질문 있으신 분은 질문 없으세요. 질문 없으면 좀 쉬는 시간을 길게 해라
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 241:22
-
-없겠습니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 241:55
-
-최대한 이제 좀 쉽게 풀어쓴다고 했는데도 여전히 좀 어려운 부분이 있었던
-것 같습니다. 수진 쌤 몇 가지 질문이 올라왔는데 질문 읽어주시고 답변해
-주실 수 있을까요. 물어
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 142:18
-
-네 질문 확인했고요 지금 말씀 주신 게 미다졸렌과 테스토스테론을
-섭스트릿으로 사용하지 못하면 대체가 가능한 섭스트릿을 무엇을 쓰시는지
-궁금합니다. 이거는 저희가 만약에 우리가 실험하고자 하는 약물이 3a 관련된
-것이라면
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 142:41
-
-그것만 관련해서 사실 보고 싶기 때문에 3 aol sup스트레잇을 사용하기를
-추천드리고요 그것들은 검색을 해서 찾아야 될 것 같습니다. 저희가 실제로
-지금 하는 일에서
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 142:58
-
-이 인비트레스의 실험을 하고 있지는 않기 때문에 대표적으로 이 두 개는
-쓴다는 건 많이 알려졌고요 그 외의 것들은 문헌 검색을 통해서 확인해야 될
-것 같습니다. 그리고 다른 십을 안 건드리는 서스트레이으로 찾아야 될 것
-같습니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 243:16
-
-배 박사님이 추가 코멘트를 해 주셨는데요. 리페디핀 사용 가능하지만 빛에서
-분해되는 경향이 있어서 이 비트로 시험할 때는 적절하지 않을 수 있다.
-말씀해 주셨습니다. 다음 질문은 ic ppt와 ki 차이를 다시 설명 부탁드리려고
-했습니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 143:35
-
-네 그 슬라이드로 한번 다시 가볼까요.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 143:42
-
-ic ppt도 단위는 농도 단위고요 ki도 단위는 농도 단위입니다. ki는 조금 더
-인트린직한 값으로 생각하시면 될 것 같고요 그리고 rcppt는 익스트린지
-컨스턴트입니다. icppt 값은 저희가 구하는 s스트레이 컨센트레이션이나
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 144:06
-
-서스트의 종류 그리고 인큐베이션 타임에 따라서 달라지는 값입니다. 하지만
-그리고 랩트의 베리어빌리티가 있어서 리프로우디 s을 하지 않을 수도 있고요
-ki는 이니비터랑 엔자m의 고유한 값이고요 어떤 서스트릿을 사용하던
-달라지지 않는 값입니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 144:30
-
-그래서 사실 ic ppt를 먼저 구하는 이유는 ki 실험에서 사용하기 위한
-미니미터의 농도 구간을 찾기 위해서예요. 그래서 ic ppt 자체는 리버서블
-이니베이션에서 그 값은 디디아이 프리딕션에 사용을 하지 않고요
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 144:50
-
-아 얻어진 그 케이아이 값을 이제 ddr 프레딕션의 메인 파라미터로
-사용합니다.
-
-![](./media/image3.png){width="0.375in" height="0.375in"}
-
-참석자 145:03
-
-네 그리고 만약에 ki 값이 없으면 당연히 아까 설명드린 것과 같이 icpp 값을
-기반해서 ki를 예측하기도 합니다. 그래서 이 값이 없을 경우 이 실험을 안
-했을 경우 이렇게 활용되기도 합니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 245:43
-
-네 발표를 준비하시다가 업데이트된 내용이 좀 있어서 저희가 며칠 전에
-보내드린 자료하고는 좀 다를 수 있습니다. 막판까지 저희가 열심히 자료
-찾고 하다 보니까 업데이트가 좀 됐는데요. 업데이트된 자료는 오늘 중에
-제가 별도의 공간에 올린 후에 메일로 다시 한번 공지 드리도록 하겠습니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 246:08
-
-배 박사님이 이제 ki와 icpt에 대해서 또 채팅창에 남겨주셨는데 채팅 혹시
-못 본 분이 있어서 제가 읽어드리겠습니다. 애플리케이션 측면에서 만약 ki
-값이 없으면 icpt가 km 근처에서 구해진 값으로 가정하고 ki 콜 icpp 곱하기
-2분의 1로 계산해서 사용할 수 있습니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 246:30
-
-하지만 icpt의 경우 랩 베리어빌리티가 커서 kr 실험을 권고한다라고 추가
-커멘트를 해주셨습니다. 그러면 이번 시간에 여기까지 하는 걸로 정리를 할
-수 있을 것 같고요 좀 쉬는 시간을 길게 가져서 2시 35분부터 최수인
-선생님이 이번에 인덕션에 대한 특성 평가를 준비하도록 하겠습니다.
-
-![](./media/image4.png){width="0.375in" height="0.375in"}
-
-참석자 246:56
-
-도 드시고 길게 한번 켜시고
