--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -8,7 +8,35 @@
 }
 
 
-# yim.Rmd ----
+# 04.Rmd ----
+
+@article{studies2020cytochrome,
+  title={Cytochrome P450 Enzyme-and Transporter-Mediated Drug Interactions Guidance for Industry US Department of Health and Human Services},
+  author={Studies, In Vitro Drug Interaction},
+  journal={Food and Drug Administration, Center for Drug Evaluation and Research (CDER)},
+  year={2020}
+}
+
+@misc{european2012guideline,
+  title={Guideline on the investigation of drug interactions},
+  author={European Medicines Agency},
+  journal={Committee for Human Medicinal Products (CHMP)},
+  year={2012},
+  publisher={European Medicines Agency London, United Kingdom}
+}
+
+@article{yanakakis2012biotransformation,
+  title={Biotransformation of the antiretroviral drug etravirine: metabolite identification, reaction phenotyping, and characterization of autoinduction of cytochrome P450-dependent metabolism},
+  author={Yanakakis, Lindsay J and Bumpus, Namandj{\'e} N},
+  journal={Drug Metabolism and Disposition},
+  volume={40},
+  number={4},
+  pages={803--814},
+  year={2012},
+  publisher={ASPET}
+}
+
+# 08.Rmd ----
 
 @article{usansky2005estimating,
   title={Estimating human drug oral absorption kinetics from Caco-2 permeability using an absorption-disposition model: model development and evaluation and derivation of analytical solutions for ka and Fa},
@@ -55,6 +83,7 @@
 }
 
 
+# pharmapk previous ----
 
 # 01.Rmd ----
 
