--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -7,6 +7,18 @@
   publisher={Academic press}
 }
 
+# 03.Rmd ----
+
+@article{liu2014rational,
+  title={Rational Use of Plasma Protein and Tissue Binding Data in Drug Design: Miniperspective},
+  author={Liu, Xingrong and Wright, Matthew and Hop, Cornelis ECA},
+  journal={Journal of medicinal chemistry},
+  volume={57},
+  number={20},
+  pages={8238--8248},
+  year={2014},
+  publisher={ACS Publications}
+}
 
 # 04.Rmd ----
 
@@ -36,7 +48,163 @@
   publisher={ASPET}
 }
 
+
+# 07.Rmd ----
+
+@article{brouwer2013vitro,
+  title={In vitro methods to support transporter evaluation in drug discovery and development},
+  author={Brouwer, Kim LR and Keppler, Dietrich and Hoffmaster, Keith A and Bow, Daniel AJ and Cheng, Yaofeng and Lai, Yurong and Palm, Johan E and Stieger, Bruno and Evers, Raymond and International Transporter Consortium},
+  journal={Clinical Pharmacology \& Therapeutics},
+  volume={94},
+  number={1},
+  pages={95--112},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+@article{burt2016metformin,
+  title={Metformin and cimetidine: Physiologically based pharmacokinetic modelling to investigate transporter mediated drug--drug interactions},
+  author={Burt, HJ and Neuhoff, Sybille and Almond, L and Gaohua, L and Harwood, MD and Jamei, Masoud and Rostami-Hodjegan, A and Tucker, GT and Rowland-Yeo, K},
+  journal={European Journal of Pharmaceutical Sciences},
+  volume={88},
+  pages={70--82},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{ogilvie2006glucuronidation,
+  title={Glucuronidation converts gemfibrozil to a potent, metabolism-dependent inhibitor of CYP2C8: implications for drug-drug interactions},
+  author={Ogilvie, Brian W and Zhang, Donglu and Li, Wenying and Rodrigues, A David and Gipson, Amy E and Holsapple, Jeff and Toren, Paul and Parkinson, Andrew},
+  journal={Drug Metabolism and Disposition},
+  volume={34},
+  number={1},
+  pages={191--197},
+  year={2006},
+  publisher={ASPET}
+}
+
+@article{backman2002gemfibrozil,
+  title={Gemfibrozil greatly increases plasma concentrations of cerivastatin},
+  author={Backman, Janne T and Kyrklund, Carl and Neuvonen, Mikko and Neuvonen, Pertti J},
+  journal={Clinical Pharmacology \& Therapeutics},
+  volume={72},
+  number={6},
+  pages={685--691},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{kim2013increased,
+  title={Increased systemic exposure of fimasartan, an angiotensin II receptor antagonist, by ketoconazole and rifampicin},
+  author={Kim, Jung Won and Yi, SoJeong and Kim, Tae-Eun and Lim, Kyoung Soo and Yoon, Seo Hyun and Cho, Joo-Youn and Lee, Min Goo and Song, Im-Sook and Shin, Sang-Goo and Jang, In-Jin and others},
+  journal={The Journal of Clinical Pharmacology},
+  volume={53},
+  number={1},
+  pages={75--81},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{kim2017quantitative,
+  title={Quantitative analysis of complex drug--drug interactions between repaglinide and cyclosporin a/gemfibrozil using physiologically based pharmacokinetic models with in vitro transporter/enzyme inhibition data},
+  author={Kim, Soo-Jin and Toshimoto, Kota and Yao, Yoshiaki and Yoshikado, Takashi and Sugiyama, Yuichi},
+  journal={Journal of Pharmaceutical Sciences},
+  volume={106},
+  number={9},
+  pages={2715--2726},
+  year={2017},
+  publisher={Elsevier}
+}
+@article{varma2015predicting,
+  title={Predicting clearance mechanism in drug discovery: extended clearance classification system (ECCS)},
+  author={Varma, Manthena V and Steyn, Stefanus J and Allerton, Charlotte and El-Kattan, Ayman F},
+  journal={Pharmaceutical research},
+  volume={32},
+  number={12},
+  pages={3785--3802},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{kenna2020sc1,
+  title={SC1. 4-Can BSEP inhibition testing in drug discovery and development reduce liver injury risk? An international transporter consortium perspective},
+  author={Kenna, Gerry},
+  journal={Drug Metabolism and Pharmacokinetics},
+  volume={35},
+  number={1},
+  pages={S1--S2},
+  year={2020},
+  publisher={Elsevier BV}
+}
+
+@article{zamek2018transporters,
+  title={Transporters in drug development: 2018 ITC recommendations for transporters of emerging clinical importance},
+  author={Zamek-Gliszczynski, Maciej J and Taub, Mitchell E and Chothe, Paresh P and Chu, Xiaoyan and Giacomini, Kathleen M and Kim, Richard B and Ray, Adrian S and Stocker, Sophie L and Unadkat, Jashvant D and Wittwer, Matthias B and others},
+  journal={Clinical Pharmacology \& Therapeutics},
+  volume={104},
+  number={5},
+  pages={890--899},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{krishna2007effect,
+  title={Effect of a single cyclosporine dose on the single-dose pharmacokinetics of sitagliptin (MK-0431), a dipeptidyl peptidase-4 inhibitor, in healthy male subjects},
+  author={Krishna, Rajesh and Bergman, Arthur and Larson, Patrick and Cote, Josee and Lasseter, Kenneth and Dilzer, Stacey and Wang, Amy and Zeng, Wei and Chen, Li and Wagner, John and others},
+  journal={The Journal of clinical pharmacology},
+  volume={47},
+  number={2},
+  pages={165--174},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
 # 08.Rmd ----
+
+# 01
+@article{yimabsorption,
+  title={Predicting human pharmacokinetics from preclinical data: absorption},
+  author={Yim, Dong-Seok and Choi, Suein and Bae, Soo Hyeon},
+  journal={Translational and Clinical Pharmacology},
+  volume={28},
+  number={3},
+  pages={126},
+  year={2020},
+  publisher={Korean Society for Clinical Pharmacology and Therapeutics}
+}
+
+# 02
+@article{yim2020predicting,
+  title={Predicting human pharmacokinetics from preclinical data: volume of distribution},
+  author={Yim, Dong-Seok and Choi, Suein},
+  journal={Translational and Clinical Pharmacology},
+  volume={28},
+  number={4},
+  pages={169},
+  year={2020},
+  publisher={Korean Society for Clinical Pharmacology and Therapeutics}
+}
+
+# 03
+@article{yim2021predicting,
+  title={Predicting human pharmacokinetics from preclinical data: clearance},
+  author={Yim, Dong-Seok and Bae, Soo Hyeon and Choi, Suein},
+  journal={Translational and Clinical Pharmacology},
+  volume={29},
+  number={2},
+  pages={78},
+  year={2021},
+  publisher={Korean Society for Clinical Pharmacology and Therapeutics}
+}
+
+@article{liu2011we,
+  title={Do we need to optimize plasma protein and tissue binding in drug discovery?},
+  author={Liu, Xingrong and Chen, Cuiping and ECA Hop, Cornelis},
+  journal={Current topics in medicinal chemistry},
+  volume={11},
+  number={4},
+  pages={450--466},
+  year={2011},
+  publisher={Bentham Science Publishers}
+}
 
 @article{usansky2005estimating,
   title={Estimating human drug oral absorption kinetics from Caco-2 permeability using an absorption-disposition model: model development and evaluation and derivation of analytical solutions for ka and Fa},
@@ -58,17 +226,6 @@
   pages={1400--1416},
   year={2002},
   publisher={Springer}
-}
-
-@article{yim2020predicting,
-  title={Predicting human pharmacokinetics from preclinical data: volume of distribution},
-  author={Yim, Dong-Seok and Choi, Suein},
-  journal={Translational and Clinical Pharmacology},
-  volume={28},
-  number={4},
-  pages={169},
-  year={2020},
-  publisher={Korean Society for Clinical Pharmacology and Therapeutics}
 }
 
 @article{yim2019potency,
